--- a/application/views/scripts/event/view.phtml
+++ b/application/views/scripts/event/view.phtml
@@ -2,10 +2,29 @@
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel"><?php echo $this->event['title'] ?></h3>
+    <h3 id="myModalLabel"><?php echo $this->event['title'] ?> </h3>
+    <span class="label label-info"><?php echo $this->event['location'] ?></span>
+    <?php 
+    
+    $eventDays = Date("d m Y", strtotime($this->event['until_date']));
+    if(strtotime($this->event['until_date']) < time()){
+        $spanClass = "label label-important";
+    } elseif(strtotime($this->event['until_date']) < time()){
+        $spanClass = "label label-info";
+    } else{
+        $spanClass = "label label-info";
+        
+    }      
+    ?>
+    <span class="<?php echo $spanClass ?>">
+        <?php echo Date('j M Y', strtotime($this->event['from_date'])) ?> s/d <?php echo Date('j M Y', strtotime($this->event['until_date'])) ?>
+    </span>
 </div>
 <div class="modal-body">
-    <?php echo $this->event['from_date'] ?>
+    <div class="well">
+        <?php echo $this->event['info'] ?>
+
+    </div>
 </div>
 <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Tutup</button>
