--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -78,7 +78,12 @@
                     &times;
                 </button>
                 <h4>Perhatian</h4>
-                blalalala
+                Tidak ada dokumen yang sesuai.
+                
+                <h4><br />Saran:</h4>
+                <ul><li>Yakinkan koneksi terhubung.</li>
+                <li>Yakinkan dokumen sudah sesuai.</li>
+                <li>Periksa kembali ejaan.</li></ul>
             </div>
         </div>
 
